--- a/src/main/webapp/i18n/nl/home.json
+++ b/src/main/webapp/i18n/nl/home.json
@@ -1,19 +1,11 @@
 {
   "home": {
-    "title": "Welkom, Java Hipster!",
-    "subtitle": "Dit is uw startpagina",
+    "title": "Welkom",
+    "message": "Dit is de startpagina van www.prijzentafel.nl. Met deze site kunt u:",
+    "message1": "Een virtuele prijzentafel aanmaken, als u organisator bent van een online bridge drive, Kahoot etcetera",
+    "message2": "Een prijs uitzoeken, als u winnaar bent van zo'n evenement",
     "logged": {
       "message": "U bent aangemeld als gebruiker \"{{username}}\"."
-    },
-    "question": "Indien u vragen hebt over JHipster:",
-    "link": {
-      "homepage": "JHipster startpagina",
-      "stackoverflow": "JHipster op Stack Overflow",
-      "bugtracker": "JHipster bug tracker",
-      "chat": "JHipster publieke chatruimte",
-      "follow": "contacteer @jhipster op Twitter"
-    },
-    "like": "Als u JHipster leuk vindt, vergeet dan niet om ons een ster te geven op",
-    "github": "GitHub"
+    }
   }
 }
