--- a/src/main/webapp/i18n/nl/tableOfPrizes.json
+++ b/src/main/webapp/i18n/nl/tableOfPrizes.json
@@ -1,23 +1,23 @@
 {
-  "tableOfPrizesApp": {
+  "TableOfPrizesApp": {
     "tableOfPrizes": {
       "home": {
-        "title": "Table Of Prizes",
-        "createLabel": "Maak een nieuwe Table Of Prizes",
-        "createOrEditLabel": "Maak of wijzig een Table Of Prizes",
-        "notFound": "No Table Of Prizes found"
+        "title": "Prijzentafels",
+        "createLabel": "Maak een nieuwe prijzentafel",
+        "createOrEditLabel": "Maak of wijzig een prijzentafel",
+        "notFound": "Geen prijzentafels gevonden"
       },
-      "created": "A new Table Of Prizes is created with identifier {{ param }}",
-      "updated": "A Table Of Prizes is updated with identifier {{ param }}",
-      "deleted": "A Table Of Prizes is deleted with identifier {{ param }}",
+      "created": "Prijzentafel {{ param }} aangemaakt",
+      "updated": "Prijzentafel {{ param }} gewijzigd",
+      "deleted": "Prijzentafel {{ param }} verwijderd",
       "delete": {
-        "question": "Bent u zeker dat u Table Of Prizes {{ id }} wilt verwijderen?"
+        "question": "Bent u zeker dat u prijzentafel {{ id }} wilt verwijderen?"
       },
       "detail": {
-        "title": "Table Of Prizes"
+        "title": "Prijzentafel"
       },
-      "name": "Name",
-      "user": "User"
+      "name": "Naam",
+      "user": "Gebruiker"
     }
   }
 }
