Add set of Prizes underneath TableOfPrizes

--- a/src/main/webapp/i18n/en/tableOfPrizes.json
+++ b/src/main/webapp/i18n/en/tableOfPrizes.json
@@ -17,7 +17,8 @@
         "title": "Table Of Prizes"
       },
       "name": "Name",
-      "user": "User"
+      "user": "User",
+      "quantity": "Quantity"
     }
   }
 }
