--- a/src/main/webapp/i18n/nl/global.json
+++ b/src/main/webapp/i18n/nl/global.json
@@ -9,6 +9,7 @@
         "main": "Entiteiten",
         "image": "Afbeelding",
         "tableOfPrizes": "Prijzentafel",
+        "prize": "Prize",
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
       },
       "account": {
