--- a/src/main/webapp/i18n/nl/tableOfPrizes.json
+++ b/src/main/webapp/i18n/nl/tableOfPrizes.json
@@ -17,7 +17,8 @@
         "title": "Prijzentafel"
       },
       "name": "Naam",
-      "user": "Gebruiker"
+      "user": "Gebruiker",
+      "quantity": "Aantal"
     }
   }
 }
