--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -9,6 +9,7 @@
         "main": "Entities",
         "image": "Image",
         "tableOfPrizes": "Table Of Prizes",
+        "prize": "Prize",
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
       },
       "account": {
