Extend top detail view

--- a/src/main/webapp/i18n/en/tableOfPrizes.json
+++ b/src/main/webapp/i18n/en/tableOfPrizes.json
@@ -17,6 +17,7 @@
         "title": "Table Of Prizes"
       },
       "name": "Name",
+      "contents": "Contents",
       "user": "User",
       "quantity": "Quantity"
     }
