--- a/src/main/webapp/i18n/nl/tableOfPrizes.json
+++ b/src/main/webapp/i18n/nl/tableOfPrizes.json
@@ -17,6 +17,7 @@
         "title": "Prijzentafel"
       },
       "name": "Naam",
+      "contents": "Inhoud",
       "user": "Gebruiker",
       "quantity": "Aantal"
     }
