--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -7,9 +7,8 @@
       "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
       "entities": {
         "main": "Entities",
-        "image": "Image",
-        "tableOfPrizes": "Table Of Prizes",
-        "prize": "Prize",
+        "image": "Images",
+        "tableOfPrizes": "Tables Of Prizes",
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
       },
       "account": {
