--- a/src/main/webapp/i18n/nl/tableOfPrizes.json
+++ b/src/main/webapp/i18n/nl/tableOfPrizes.json
@@ -18,8 +18,8 @@
       },
       "name": "Naam",
       "contents": "Inhoud",
-      "user": "Gebruiker",
-      "quantity": "Aantal"
+      "addprize": "Toevoegen",
+      "deleteprize": "Verwijderen"
     }
   }
 }
