--- a/src/main/webapp/i18n/en/tableOfPrizes.json
+++ b/src/main/webapp/i18n/en/tableOfPrizes.json
@@ -7,11 +7,11 @@
         "createOrEditLabel": "Create or edit a table of prizes",
         "notFound": "No tables of prizes found"
       },
-      "created": "A new table of prizes is created with identifier {{ param }}",
-      "updated": "A table of prizes is updated with identifier {{ param }}",
-      "deleted": "A table of prizes is deleted with identifier {{ param }}",
+      "created": "Table of prizes {{ param }} created",
+      "updated": "Table of prizes {{ param }} updated",
+      "deleted": "Table of prizes {{ param }} deleted",
       "delete": {
-        "question": "Are you sure you want to delete table of prizes {{ id }}?"
+        "question": "Are you sure you want to delete table of prizes {{ param }}?"
       },
       "detail": {
         "title": "Table of prizes"
