Text changes on front page

--- a/src/main/webapp/i18n/nl/home.json
+++ b/src/main/webapp/i18n/nl/home.json
@@ -1,6 +1,6 @@
 {
   "home": {
-    "title": "Welkom",
+    "title": "Prijzentafel",
     "message": "Dit is de startpagina van prijzentafel.nl. Met deze site kunt u:",
     "message1": "Een virtuele prijzentafel aanmaken, als u organisator bent van een online bridge drive, Kahoot etcetera",
     "message2": "Een prijs uitzoeken, als u winnaar bent van zo'n evenement",
