--- a/src/main/webapp/i18n/en/home.json
+++ b/src/main/webapp/i18n/en/home.json
@@ -1,7 +1,7 @@
 {
   "home": {
-    "title": "Welcome",
-    "message": "This is the homepage of prijzentafel.nl. With this site you can:",
+    "title": "Table Of Prizes",
+    "message": "This is the homepage of tableofprizes.com. With this site you can:",
     "message1": "Create a virtual tafel of prizes, if you are organising an online bridge drive, Kahoot etcetera",
     "message2": "Select a prize, if you are a winner of such event",
     "logged": {
