--- a/src/main/webapp/i18n/nl/global.json
+++ b/src/main/webapp/i18n/nl/global.json
@@ -36,10 +36,10 @@
       "language": "Taal"
     },
     "form": {
-      "username.label": "Username",
-      "username.placeholder": "Uw username",
-      "currentpassword.label": "Current password",
-      "currentpassword.placeholder": "Current password",
+      "username.label": "Gebruikersnaam",
+      "username.placeholder": "Uw gebruikersnaam",
+      "currentpassword.label": "Huidig wachtwoord",
+      "currentpassword.placeholder": "Huidig wachtwoord",
       "newpassword.label": "Nieuw wachtwoord",
       "newpassword.placeholder": "Nieuw wachtwoord",
       "confirmpassword.label": "Nieuw wachtwoord bevestigen",
